Use Collectors.toList() for compatibility